syntax = "proto3";
import public "google/protobuf/timestamp.proto";

option java_outer_classname = "FamsSecurityBasicinfoBO_PRO";
option java_package = "com.purefun.fams.queen.rds.pro";

message FamsSecurityBasicinfoBO {
     string uuid = 1;
     sint64 boid = 2;
    sint64 id = 3;
    string exch = 4;
    string securityId = 5;
    string tsId = 6;
    string exchangeId = 7;
    string securityName = 8;
    string area = 9;
    string industry = 10;
    string marketType = 11;
    string currency = 12;
    string status = 13;
    string listDate = 14;
    string htFlag = 15;
    google.protobuf.Timestamp modifyTime = 16;
    google.protobuf.Timestamp createTime = 17;
}
